[package]
name = "arx-kw"
version = "0.3.1"
authors = ["Thor McAvenia <mcaveniathor@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["cryptography", "key", "encryption", "keywrap", "arx-kw"]
categories = ["cryptography", "encoding", "algorithms", "authentication"]
description = "An implementation of the ARX-KW-8-2-4 Key Wrap constructions"
repository = "https://github.com/mcaveniathor/arx-kw"
readme = "README.md"

[features]
nightly = ["chacha/nightly"]
e = []
g = []
gx = []
ex = []
default = ["e", "g", "gx", "ex"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha = "0.3.0"
siphasher = "0.3.3"
byteorder = "1.4.2"
arrayref = "0.3.6"
thiserror = "1.0.23"
subtle = "2.4.0"

[dev-dependencies]
hex = "0.4.2"
anyhow = "1.0"
criterion = "0.3"


# Benches run with Criterion

[[bench]]
name = "e"
harness = false

[[bench]]
name = "ex"
harness = false

[[bench]]
name = "g"
harness = false

[[bench]]
name = "gx"
harness = false
